Add theme color

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap" rel="stylesheet">
 	<link rel="icon" href="favicon.png">
 	<link rel="stylesheet" href="style.css">
+	<meta name="theme-color" content="#303536" />
 </head>
 <body>
 	<div><p>Coming Soon</p></div>
