--- a/index.html
+++ b/index.html
@@ -4,11 +4,31 @@
 	<meta charset="UTF-8">
 	<title>Gone Hacking Studio</title>
 	<link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap" rel="stylesheet">
-	<link rel="icon" href="favicon.png">
+	<link rel="icon" href="images/favicon.png">
 	<link rel="stylesheet" href="style.css">
 	<meta name="theme-color" content="#303536" />
 </head>
 <body>
-	<div><p>Coming Soon</p></div>
+	<div class="coming-soon">
+		<p>Coming Soon</p>
+	</div>
+
+	<div class="social-media">
+		<a href="https://discord.gg/ddMV7vq" target="_blank">
+			<img src="images/sm/discord.png" alt="Discord">
+		</a>
+		<a href="https://www.facebook.com/gonehackingstudio" target="_blank">
+			<img src="images/sm/facebook.png" alt="Facebook">
+		</a>
+		<a href="https://www.twitter.com/gonehackingstu1/" target="_blank">
+			<img src="images/sm/twitter.png" alt="Twitter">
+		</a>
+		<a href="https://www.youtube.com/channel/UCBfvuPj_x95IrQm0oD-VABg" target="_blank">
+			<img src="images/sm/youtube.png" alt="YouTube">
+		</a>
+		<a href="https://www.instagram.com/gonehackingstudio/" target="_blank">
+			<img src="images/sm/instagram.png" alt="Instagram">
+		</a>
+	</div>
 </body>
 </html>
